--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <!--<![endif]-->
         <script src="http://cdn.tmijs.org/js/latest/1.x/tmi.min.js"></script>
 
+        <script src="https://apis.google.com/js/api.js"></script>
+
         <script src="js/youtube.js"></script>
         <script src="js/oauth.js"></script>
         <script src="js/bot.js"></script>
