--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <script src="https://apis.google.com/js/api.js"></script>
 
-        <script src="js/youtube.js"></script>
-        <script src="js/oauth.js"></script>
-        <script src="js/bot.js"></script>
-        <script src="js/data.js"></script>
-        <script src="js/app.js"></script>
+        <script src="public/js/youtube.js"></script>
+        <script src="public/js/oauth.js"></script>
+        <script src="public/js/bot.js"></script>
+        <script src="public/js/data.js"></script>
+        <script src="public/js/app.js"></script>
     </body>
 </html>
